k8s/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chatapp-backend-deployment
  namespace: chatapp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chatapp-ns
      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image: rohitjagtap/chatapp-backend:latest
        ports:
        - containerPort: 5001
