k8s/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chatapp-frontend-deployment
  namespace: chatapp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chatapp-ns
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: rohitjagtap/chatapp-frontend:latest
        ports:
        - containerPort: 80
