k8s/mongodb-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chatapp-mongodb-deployment
  namespace: chatapp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pod
      namespace: chatapp-ns
      labels:
        app: mongodb
    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
