k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chatapp-ns
spec:
  selector:
    app: backend
  ports:
  - port: 5001  #for outer world
    targetPort: 5001  #port on which the nginx runs
  type: ClusterIP
